ch is up-to-date with 'origin/gh-pages'.

--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+h1 {
+  color: green;
+  font-size: 36px;
+  text-align: center;
+}
+</style>
 	<title>Hello</title>
 </head>
 <body>
-<h1> Hello coursera</h1>
+<h1> Hello coursera, Its a great day.</h1>
 
 </body>
 </html>
